<resources>
    <string name="app_name">PurrfectMatch(unpacked)</string>
    <string name="home">Home</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="purrfect_match">Purrfect Match</string>
    <string name="account">Account</string>
    <string name="wallet">Wallet</string>
    <string name="settings">Settings</string>
    <string name="rufelle">Rufelle</string>
    <string name="lahug_cebu_city">Lahug, Cebu City</string>
    <string name="shop">Shop</string>
    <string name="adopt">Adopt</string>
    <string name="track_adoption">Track Adoption</string>
    <string name="donate">Donate</string>
    <string name="track_orders">Track Orders</string>
    <string name="adoptAct">Adopt</string>
    <string name="donateAct">Donate</string>
    <string name="PMlogo">TODO</string>
    <string name="welcome">Welcome to...</string>
    <string name="welcome_to">Welcome to...</string>
    <string name="start">Start</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome_back_fellow_cat_parent">Welcome back, fellow cat parent!</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="cleo">Cleo</string>
    <string name="organization">Organization</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="_2_years">2 years</string>
    <string name="female">Female</string>
    <string name="cats_of_it_park">Cats of IT Park</string>
    <string name="ADOPT">ADOPT</string>
    <string name="DONATE">DONATE</string>
    <string name="SHOP">SHOP</string>S
    <string name="TRACKADOPTION">TRACK ADOPTION</string>
    <string name="TRACKORDER">TRACK ORDER</string>
    <string name="add_button">Add Button</string>
    <string name="choose_cat">Choose Cat</string>
    <string name="announcements">Announcements</string>
    <string name="adoptbtn">ADOPT</string>
    <string name="just_a_circle">just_a_circle</string>
    <string name="_1_000_000_00">₱‎1,000,000.00</string>
    <string name="your_wallet">Your Wallet</string>
    <string name="transactions">Transactions</string>
</resources>