<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tvcatparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <ImageView
        android:id="@+id/greenWave"
        android:layout_width="546dp"
        android:layout_height="967dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/PMlogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/green_login"
        tools:ignore="ImageContrastCheck,VisualLintBounds" />

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="328dp"
            android:layout_height="175dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="437dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/welcome_back_fellow_cat_parent"
            android:textColor="#CDE9FF"
            android:textSize="48sp"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="359dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="312dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#1E272C" />

        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="11dp"
            android:layout_marginBottom="232dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#263238" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="358dp"
            android:layout_height="66dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="142dp"
            android:background="@drawable/rounded_square"
            android:text="@string/login"
            android:textColor="#172129"
            android:textSize="16sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="358dp"
            android:layout_height="66dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/rounded_square"
            android:text="@string/register"
            android:textColor="#172129"
            android:textSize="16sp"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="220dp"
            android:fontFamily="sans-serif-black"
            android:text="TextView"
            android:textColor="#C60E0E"
            android:textColorHint="#FF0505" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/register_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="10dp"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="#6A000000"
            android:textSize="20sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
